# podpull

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: demo.tape  index.html
docs/superpowers/plans/: 2026-07-07-feed-robustness-podcastindex.md
src/podget/: __init__.py  cli.py  core.py
src/podpull/: __init__.py  cli.py  core.py  skills.py
src/podpull/integrations/: SKILL.md  __init__.py  cursor_rule.mdc  opencode_command.md
tests/: test_cli.py  test_core.py  test_multithread.py  test_network.py  test_skills.py
tests/fixtures/feeds/: atom.xml  dirty_entities.xml  firstory.xml  rss10_rdf.xml  rss2_plain.xml  soundon.xml  utf16_bom.xml  xiaoyuzhou.xml  ximalaya.xml
