[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podget"
version = "0.2.1"
description = "Download specific podcast episode audio from Apple Podcasts, RSS feeds, or xiaoyuzhou links — with an interactive picker."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "xiaoleiyu" }]
keywords = ["podcast", "download", "apple-podcasts", "rss", "xiaoyuzhou", "mp3", "m4a", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "rich>=13.7",
    "rich-argparse>=1.4",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/xiaoleiy/podget"
Issues = "https://github.com/xiaoleiy/podget/issues"

[project.scripts]
podget = "podget.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/podget"]

[tool.ruff]
line-length = 100
target-version = "py39"
